# cmake

a/: CMakeLists.txt
c/: CMakeLists.txt
c/example/: CMakeLists.txt
d/core/: CMakeLists.txt
d/example/: CMakeLists.txt
e/core/: CMakeLists.txt
e/core/hello/: CMakeLists.txt
i/: CMakeLists.txt
